Fixed display for icons bug on mobile devices

--- a/src/components/choose-meal/ChooseMeal.css
+++ b/src/components/choose-meal/ChooseMeal.css
@@ -4,7 +4,9 @@
   display: flex;
   flex-direction: column;
 }
-
+* {
+  overflow: initial !important;
+}
 .image-topbar-wrapper {
   width: 156px;
   height: 23px;
